Refactor Tests